Don't crash if the encoding enumerator is accessed when we have no response head.  Bug 264825, r=biesi, sr=darin